# doraemon_chat

./: .gitignore
client/: ChatPage1.cpp  ChatPage1.h  ChatPage1.ui  adduseritem.h  adduseritem.ui  all_chat.pro  bubbleframe.cpp  bubbleframe.h  chat_dialog.cpp  chat_dialog.h  chat_dialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedlabel.cpp  custom_edit.cpp  custom_edit.h  forget_password.cpp  forget_password.h  forget_password.ui  global.cpp  global.h  httpmgr.cpp  httpmgr.h  listitembase.cpp  listitembase.h  loaddlg.cpp  loaddlg.h  loaddlg.ui  logindialog.cpp  logindialog.h  (+27 more)
client/style/: stylesheet.qss
sever/ChatServer/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatServer.cpp  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.h  UserMgr.cpp  UserMgr.h  config.ini  const.h  data.h
sever/GateServer_new/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h
sever/StatusServer/: AsioIOServicePool.h  CMakeLists.txt  StatusServer.cpp  config.ini
sever/varify_server/: config.json  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
